Fix Markbot errors

--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
+<!DOCTYPE html>
 <html lang="en-ca">
 <head>
-<img src="images/logo.svg" alt="">
+  <meta charset="utf-8">
+  <title>HTML template</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+</head>
+<body>
 
-<header>
-<h1>The Solar System</h1>
-</header>
+  <header>
+    <img src="images/logo.svg" alt="">
+    <h1>The Solar System</h1>
 
-<header>
-  <nav>
-    <ul>
-      <li> <a href= "#">Stars</a> </li>
-      <li> <a href= "#">Terrestial Planets</a> </li>
-      <li> <a href= "#">Gas Giants</a> </li>
-      <li> <a href= "#">Dwarf Planets</a> </li>
-      <li> <a href= "#">Asteroids</a> </li>
-      <li> <a href= "#">Comets</a> </li>
+    <nav>
+      <ul>
+        <li> <a href="#">Stars</a> </li>
+        <li> <a href="#">Terrestrial planets</a> </li>
+        <li> <a href="#">Gas giants</a> </li>
+        <li> <a href="#">Dwarf planets</a> </li>
+        <li> <a href="#">Asteroids</a> </li>
+        <li> <a href="#">Comets</a> </li>
+      </ul>
+    </nav>
+  </header>
 
+  <main>
+    <figure>
+      <img src="images/banner.svg" alt="">
+      <figcaption>The Solar System- Our Solar System in the stars</figcaption>
+    </figure>
 
-<img src="images/banner.svg" alt="">
+    <p>The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
 
-<header>
-  <h1>The Solar System- Our Solar System in the stars</h1>
-
-
-<p> The Solar System is the gravitationally bound system comprising the Sun and the planetary system that orbits it.</p>
+  </main>
+</body>
+</html>
